Some Exchange padding tweaks, lighter PriceChart linecolor, yAxis outside of plot to prevent overlapping

--- a/web/app/components/Exchange/exchange.scss
+++ b/web/app/components/Exchange/exchange.scss
@@ -374,3 +374,7 @@ input[type=number]::-webkit-outer-spin-button {
 .borrow-price-feeds {
   padding-bottom: 2px;
 }
+
+.middle-content {
+  margin-bottom: 1rem;
+}
